# MemLayer

./: .env.example  .eslintrc.json  .gitignore  404.html  AGENT_SKILLS_DIRECTORY.md  ARCHITECTURE_UPDATE_2024-11-02.md  ARCHITECTURE_UPDATE_SUMMARY.md  BLOCKCHAIN_TSCONFIG_FIX.md  CHAT_INTERFACE_COMPLETION_REPORT.md  COMPLETE_E2E_TEST_SUMMARY.md  COMPREHENSIVE_STRESS_TEST_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  E2E_TEST_README.md  E2E_TEST_REPORT.md  E2E_TEST_SUMMARY.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  FINAL_PROJECT_COMPLETION_SUMMARY.md  FINAL_VERIFICATION.md  FRONTEND_DEMO_GUIDE.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  FRONTEND_RUNNING_STATUS.md  GITHUB_SETUP.md  IMPLEMENTATION_STATUS.md  MEMORY_VISUALIZATION_DEMO_GUIDE.md  MEMORY_VISUALIZATION_IMPLEMENTATION.md  PROJECT_ARCHITECTURE.md  PROJECT_COMPLETION_CONFIRMATION.md  QUICK_START_FRONTEND.txt  QUICK_TEST_RESULTS.md  README.md  RUN_STATUS.md  SKILL_CREATION_GUIDE.md  SKILL_CREATOR_README.md  START_GUIDE.md  SYNTAX_CHECK_REPORT.md  TOOL_CALL_TEST_REPORT.md  TOOL_CALL_TEST_SUMMARY.md  auto-deploy.sh  coi-fixed.js  (+16 more)
blockchain/programs/memory-asset/: Cargo.toml  package-lock.json  package.json  tsconfig.json
blockchain/programs/memory-asset/scripts/: deploy-devnet.sh  verify-deployment.sh
blockchain/programs/memory-asset/src/: errors.rs  lib.rs  state.rs
blockchain/programs/memory-asset/tests/: integration.ts  memory-asset.ts
blockchain/sdk/rust/: Cargo.toml  README.md
blockchain/sdk/rust/examples/: access_control.rs  basic_usage.rs  batch_minting.rs
blockchain/sdk/rust/src/: client.rs  error.rs  (+3 more)
(+734 files in other folders)
